--- a/app.bank/pom.xml
+++ b/app.bank/pom.xml
@@ -15,6 +15,7 @@
         <junit.jupiter.version>5.9.1</junit.jupiter.version>
         <junit.platform.version>1.9.1</junit.platform.version>
         <itext.version>7.2.1</itext.version>
+        <app.base.version>1.2.0</app.base.version>
     </properties>
 
     <dependencies>
@@ -55,7 +56,7 @@
         <dependency>
             <groupId>brailsoft</groupId>
             <artifactId>app.base</artifactId>
-            <version>1.1.0</version>
+            <version>${app.base.version}</version>
         </dependency>
     </dependencies>
 
