Change build files to remove constant dependencies.

--- a/app.bank/build.xml
+++ b/app.bank/build.xml
@@ -6,6 +6,7 @@
 	<property name="dir.buildfile" value="." />
 	<property name="dir.workspace" value="${dir.buildfile}" />
 	<property name="app.base.version" value="2.1.0"/>
+	<property name="app.version" value="1.0.0"/>
 	<condition property="isWindows">
 		<os family="windows" />
 	</condition>
@@ -14,11 +15,11 @@
 	</condition>
 
 	<target name="setWindowsRoot" if="isWindows">
-		<property name="user.root" value="C:/Users/nevil"/>
+		<property name="user.root" value="${user.home}"/>
 	</target>
 
 	<target name="setMacRoot" if="isMac">
-		<property name="user.root" value="/Users/nevil"/>
+		<property name="user.root" value="${user.home}"/>
 	</target>
 
 	<target name="create_run_jar" depends="setWindowsRoot, setMacRoot">
@@ -35,6 +36,7 @@
 				<attribute name="Class-Path" value=". Bank.app_lib/jcalendar-1.4.jar Bank.app_lib/jgoodies-forms-1.9.0.jar Bank.app_lib/jgoodies-common-1.8.1.jar Bank.app_lib/app.base-${app.base.version}.jar Bank.app_lib/javax.mail-1.6.2.jar Bank.app_lib/activation-1.1.jar Bank.app_lib/kernel-7.2.1.jar Bank.app_lib/bcpkix-jdk15on-1.69.jar Bank.app_lib/bcutil-jdk15on-1.69.jar Bank.app_lib/bcprov-jdk15on-1.69.jar Bank.app_lib/slf4j-api-1.7.31.jar Bank.app_lib/io-7.2.1.jar Bank.app_lib/commons-7.2.1.jar Bank.app_lib/layout-7.2.1.jar" />
 				<attribute name="Build-Date" value="${bank.build.date}" />
 				<attribute name="Build-Number" value="${build.number}" />
+                <attribute name="Application-Version" value="${app.version}" />
 			</manifest>
 			<fileset dir="${user.root}/git/App_Bank/app.bank/target/classes" />
 		</jar>
