--- a/app.bank/pom.xml
+++ b/app.bank/pom.xml
@@ -15,7 +15,7 @@
         <junit.jupiter.version>5.9.1</junit.jupiter.version>
         <junit.platform.version>1.9.1</junit.platform.version>
         <itext.version>7.2.1</itext.version>
-        <app.base.version>4.0.0</app.base.version>
+        <app.base.version>4.1.0</app.base.version>
     </properties>
 
     <dependencies>
@@ -63,6 +63,12 @@
             <artifactId>maven-javadoc-plugin</artifactId>
             <version>3.11.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -107,6 +113,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.11.2</version>
                 <configuration>
                     <doclint>all,-missing</doclint>
                 </configuration>
